@@ -42,6 +42,7 @@ NEWS
   * Fix max-age value in mod_expire for 'modification' (fixes #1978)
   * Fix evasive.silent option (#1438)
   * Fix mod-fastcgi counters
+  * Modify fastcgi error message
 
 - 1.4.22 - 2009-03-07
   * Fix wrong lua type for CACHE_MISS/CACHE_HIT in mod_cml (fixes #533)
